fixed splash page to fullscreen always; resizes on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,6 +28,10 @@
     min-height: 100vh;
 }
 
+.fullscreen-fixed {
+    height: 100vh;
+}
+
 .center {
     margin-left: auto;
     margin-right: auto;
